--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token Mining Platform</title>
+    <title>Ming Mining Platform</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,9 +12,23 @@
     <div class="container">
         <!-- Navigation Bar -->
         <nav class="navbar">
-            <div class="logo">BLUM</div>
-            <div class="menu-icon">☰</div>
+            <div class="logo">
+                <img src="blum-logo.png" alt="BLUM Logo" class="logo-image">
+            </div>
+            <div class="menu-icon" id="menuIcon">☰</div>
         </nav>
+
+        <!-- Full Page Menu -->
+        <div class="fullpage-menu" id="fullpageMenu">
+            <div class="close-btn" id="closeMenu">×</div>
+            <ul class="menu-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Mining</a></li>
+                <li><a href="#">Task</a></li>
+                <li><a href="#">Account</a></li>
+                <li><a href="#">Airdrop</a></li>
+            </ul>
+        </div>
 
         <!-- Hero Section -->
         <section class="hero-section">
