--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <span class="stat-value" id="nextClaimTime">2h 30m</span>
             </div>
             <div class="stat-item">
-                <span class="stat-label">Total Participants</span>
+                <span class="stat-label">Total Tokens</span>
                 <span class="stat-value" id="participants">500</span>
             </div>
         </section>
