--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- Navigation Bar -->
         <nav class="navbar">
             <div class="logo">
-                <img src="blum-logo.png" alt="BLUM Logo" class="logo-image">
+                <img src="blum-logo.png" alt="MING Logo" class="logo-image">
             </div>
             <div class="menu-icon" id="menuIcon">☰</div>
         </nav>
