--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ming Mining Platform</title>
+    <title>LGBTQ Coin Mining</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,12 +13,70 @@
         <!-- Navigation Bar -->
         <nav class="navbar">
             <div class="logo">
-                <img src="blum-logo.png" alt="MING Logo" class="logo-image">
+                <img src="lgbtq-logo.png" alt="LGBTQ Logo" class="logo-image">
             </div>
             <div class="menu-icon" id="menuIcon">☰</div>
         </nav>
 
         <!-- Full Page Menu -->
+        <div class="fullpage-menu" id="fullpageMenu">
+            <div class="close-btn" id="closeMenu">×</div>
+            <ul class="menu-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Mining</a></li>
+                <li><a href="#">Claim Tokens</a></li>
+                <li><a href="#">Account</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+
+        <!-- Main Section -->
+        <section class="main-section">
+            <h1>Total LGBTQ Coins Earned: <span id="totalCoins">0</span></h1>
+            <button id="actionButton" class="action-button">Start</button>
+            <div class="countdown-container">
+                <p id="countdown">3:00:00</p>
+                <div class="progress-bar">
+                    <div class="progress" id="progress"></div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <script src="script.js"></script>
+</body>
+
+</html>
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ming Mining Platform</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="container">
+
+        <nav class="navbar">
+            <div class="logo">
+                <img src="blum-logo.png" alt="MING Logo" class="logo-image">
+            </div>
+            <div class="menu-icon" id="menuIcon">☰</div>
+        </nav>
+
+       
         <div class="fullpage-menu" id="fullpageMenu">
             <div class="close-btn" id="closeMenu">×</div>
             <ul class="menu-links">
@@ -30,7 +88,7 @@
             </ul>
         </div>
 
-        <!-- Hero Section -->
+
         <section class="hero-section">
             <h1 class="hero-title">Mine Tokens Easily</h1>
             <p class="hero-description">Claim your tokens and track your progress.</p>
@@ -42,7 +100,7 @@
             </div>
         </section>
 
-        <!-- Stats Section -->
+       
         <section class="stats-section">
             <div class="stat-item">
                 <span class="stat-label">Tokens Earned</span>
@@ -61,4 +119,7 @@
     <script src="script.js"></script>
 </body>
 
-</html>
+</html> -->src="script.js"></script>
+</body>
+
+</html> -->
