--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
             <ul class="menu-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Mining</a></li>
-                <li><a href="#">Claim Tokens</a></li>
-                <li><a href="#">Account</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Tasks</a></li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li><a href="#">Airdrop</a></li>
             </ul>
         </div>
 
